fix: fix overflow on cartContent

--- a/src/components/ecommerce/CartBtn/main.module.css
+++ b/src/components/ecommerce/CartBtn/main.module.css
@@ -21,6 +21,7 @@
 
     box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
     cursor: pointer;
+    z-index: 99;
 }
 
 .cartProductCount{
