--- a/src/components/major/Dropdown/main.module.css
+++ b/src/components/major/Dropdown/main.module.css
@@ -9,18 +9,17 @@
 .dropdownContentWrapper{
     position: absolute;
     left: 0;
+    top: 10%;
     z-index: 99;
     background-color: var(--background-main);
     border-radius: 20px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
-    /* display: none; */
     opacity: 0;
     transition: all 0.15s;
     width: 400px;
 }
 
 .dropdownOpen{
-    /* display: block!important; */
     opacity: 1;
 }
 
