--- a/src/components/major/EmptyWrapper/main.module.css
+++ b/src/components/major/EmptyWrapper/main.module.css
@@ -1,10 +1,13 @@
 .emptyWrapper{
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
+    align-items: center;
+    justify-content: center;
+    row-gap: 10px;
     width: 100%;
 }
 
 .emptyWrapper p{
-    font-size: 1rem;
+    font-size: 0.9rem;
+    font-weight: 400;
 }
